--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,11 +17,8 @@ name = "ejdb"
 
 [dependencies]
 ejdb-sys = { path = "ejdb-sys", version = "0.3" }
-bson = "0.13"
-bitflags = "1.0"
-quick-error = "1.2"
-libc = "0.2"
-itertools = "0.8"
+serde_json = "1.0"
+scopeguard = "1.1.0"
 
 [dev-dependencies]
 tempdir = "0.3"
