--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
-name = "ejdb"
-version = "0.4.1"
-authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
-description = "Bindings for EJDB, and embedded JSON database"
+name = "ejdb2"
+version = "0.0.1"
+authors = ["Shi Yan <billconan@gmail.com>"]
+description = "Bindings for EJDB2, an single file embedded no-sql database"
 repository = "https://github.com/netvl/ejdb.rs"
 documentation = "https://netvl.github.io/ejdb.rs/"
 readme = "Readme.md"
-keywords = ["ejdb", "database", "json", "bson", "ffi"]
+keywords = ["ejdb2", "database", "json", "bson", "ffi"]
 license = "MIT"
 
 [badges]
 maintenance = { status = "looking-for-maintainer" }
 
-[exe]
-name = "ejdb"
+[lib]
+name = "ejdb2"
 
 [dependencies]
 ejdb-sys = { path = "ejdb-sys", version = "0.3" }
