--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,15 @@ documentation = "https://netvl.github.io/ejdb.rs/"
 readme = "Readme.md"
 keywords = ["ejdb2", "database", "json", "bson", "ffi"]
 license = "MIT"
+include = [
+    "src/*.rs",
+    "Cargo.toml",
+    "ejdb-sys/Cargo.toml",
+    "ejdb-sys/src/*.rs",
+    "ejdb-sys/ejdb-upstream/src",
+    "ejdb-sys/ejdb-upstream/CMakeLists.txt",
+    "ejdb-sys/ejdb-upstream/cmake",
+]
 
 [badges]
 maintenance = { status = "looking-for-maintainer" }
