--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ejdb2"
-version = "0.0.5"
+version = "0.0.6"
 authors = ["Shi Yan <billconan@gmail.com>"]
-description = "Bindings for EJDB2, an single file embedded no-sql database"
+description = "Binding for EJDB2, a single file embedded no-sql database"
 repository = "https://github.com/shi-yan/ejdb2rs"
 documentation = "https://github.com/shi-yan/ejdb2rs"
 readme = "README.md"
